--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Cardápio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Pedidos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/reserva_mesa">Reserva</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Delivery</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
                 </ul>
