--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,15 +1,7 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #fff8f0;
-    color: #333;
-    text-align: center;
-    margin-top: 50px;
+html, body {
+    height: 100%;
 }
 
-h1 {
-    color: #d35400;
-}
-
-p {
-    font-size: 18px;
+footer {
+    margin-top: auto;
 }
