--- a/app/templates/reserva_mesa.html
+++ b/app/templates/reserva_mesa.html
@@ -46,7 +46,7 @@
             </div>
             <div class="mb-3">
                 <label for="nome" class="form-label">CPF:</label>
-                <input type="text" class="form-control" id="nome" placeholder="Seu CPF" required>
+                <input type="text" class="form-control" placeholder="Seu CPF" required>
             </div>
 
             <div class="mb-3">
