Adicionando aria-hidden="true" nos icones e emojis para nao ter a leitura de voz, pois é apenas estilo, a frase do lado do icone e emoji já diz o papel dele. e também feito a verificação do alt e evitar o FOUC. esta tudo caminhando para frente com o front

--- a/app/templates/cardapio.html
+++ b/app/templates/cardapio.html
@@ -13,7 +13,7 @@
     <div class="container content-section">
 
         <h1 class="text-center mb-5 text-gold">
-            <i class="bi bi-book-half"></i> 
+            <i class="bi bi-book-half" aria-hidden="true"></i> 
             Nosso Cardápio
         </h1>
 
