--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,19 +31,19 @@
             <div class="row justify-content-center g-4">
                 <div class="col-md-4 fade-in">
                     <div class="info-card h-100">
-                        <h4>🍝 Massas Artesanais</h4>
+                        <h4><span aria-hidden="true">🍝</span> Massas Artesanais</h4>
                         <p>Feitas diariamente com ingredientes selecionados e amor.</p>
                     </div>
                 </div>
                 <div class="col-md-4 fade-in">
                     <div class="info-card h-100">
-                        <h4>🍷 Ambiente Sofisticado</h4>
+                        <h4><span aria-hidden="true">🍷</span> Ambiente Sofisticado</h4>
                         <p>Elegância e conforto para desfrutar uma refeição inesquecível.</p>
                     </div>
                 </div>
                 <div class="col-md-4 fade-in">
                     <div class="info-card h-100">
-                        <h4>🚚 Delivery Rápido</h4>
+                        <h4><span aria-hidden="true">🚚</span> Delivery Rápido</h4>
                         <p>Sabores italianos entregues no conforto da sua casa.</p>
                     </div>
                 </div>
