--- a/app/templates/reserva_mesa.html
+++ b/app/templates/reserva_mesa.html
@@ -11,7 +11,7 @@
         <div class="container content-section">
             
             <div class="col-lg-8 mx-auto">
-                <h1 class="text-center mb-4 text-gold"><i class="bi bi-calendar-check"></i> Faça sua reserva</h1>
+                <h1 class="text-center mb-4 text-gold"><i class="bi bi-calendar-check" aria-hidden="true"></i> Faça sua reserva</h1>
 
                 <div class="form-reserva-container">
                     <div id="mensagem" class="alert d-none"></div>
