--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
         <div class="container">
-            <a class="navbar-brand fw-bold text-gold fs-3" href="/">La Forchetta 🍝</a>
+            <a class="navbar-brand fw-bold text-gold fs-3" href="/">La Forchetta <span aria-hidden="true">🍝</span></a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
